sfSandBoxCode/force-app/main/default/objects/Location_Team__c/Location_Team__c.object-meta.xml
<CustomObject>
    <description>Shows Team Assigned to a Location</description>
    <label>Location Team</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Location Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>