sfSandBoxCode/force-app/main/default/objects/Location_Team__c/fields/Cases__c.field-meta.xml
<CustomField>
    <fullName>Cases__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cases</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Location Team</relationshipLabel>
    <relationshipName>Location_Team</relationshipName>
    <type>Lookup</type>
</CustomField>