sfSandBoxCode/force-app/main/default/objects/Location_Team__c/fields/Date_From__c.field-meta.xml
<CustomField>
    <fullName>Date_From__c</fullName>
    <description>Date Team Member started this role</description>
    <inlineHelpText>Date Team Member started this role</inlineHelpText>
    <label>Date From</label>
    <type>Date</type>
</CustomField>