sfSandBoxCode/force-app/main/default/objects/Location_Team__c/fields/Date_To__c.field-meta.xml
<CustomField>
    <fullName>Date_To__c</fullName>
    <description>Date till which Team Member ended this role</description>
    <inlineHelpText>Date till which Team Member ended this role</inlineHelpText>
    <label>Date To</label>
    <type>Date</type>
</CustomField>