sfSandBoxCode/force-app/main/default/objects/Location_Team__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Relates Teams to Locations</description>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Location Team</relationshipLabel>
    <relationshipName>Location_Team</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>