sfSandBoxCode/force-app/main/default/objects/Location_Team__c/fields/Member_Role__c.field-meta.xml
<CustomField>
    <fullName>Member_Role__c</fullName>
    <description>Role of the Assigned Person</description>
    <inlineHelpText>What is the Role of the Assigned Team Member</inlineHelpText>
    <label>Member Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Marketing Associate</fullName>
            </value>
            <value>
                <fullName>Assistant Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>