sfSandBoxCode/force-app/main/default/objects/Location_Team__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Team Member assigned  to Location</description>
    <inlineHelpText>Select the Team Member assigned to this Location</inlineHelpText>
    <label>Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Location_Team</relationshipName>
    <type>Lookup</type>
</CustomField>